[MODINVOICE-93]-Approve invoice permission and require approval to mark as paid #93 (#459)
* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update InvoiceHelper.java

* Update InvoiceHelper.java

* Update InvoiceHelper.java

* Update InvoiceHelper.java

* Update InvoiceHelper.java

* Update UserPermissionsUtil.java

* Update InvoiceHelper.java

* Update InvoiceHelper.java

* Update UserPermissionsUtil.java

* Update AcqDesiredPermissions.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update AcqDesiredPermissions.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update InvoiceHelper.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* Update UserPermissionsUtil.java

* MODINVOICE-93. Format code

* Update ApiTestBase.java

* Update InvoicesApiTest.java

* Update ApiTestBase.java

* Update ApiTestBase.java

* Update ApiTestBase.java

* Update ApiTestBase.java

* Update InvoiceHelperTest.java

* Update InvoiceHelperTest.java

* Update InvoiceHelperTest.java

* Update InvoiceHelperTest.java

* Update InvoicesApiTest.java

* Update InvoicesApiTest.java

* Update InvoicesApiTest.java

* Update InvoicesApiTest.java

* Update InvoicesApiTest.java

* Update InvoicesApiTest.java

* Update InvoicesApiTest.java

* Update InvoicesApiTest.java

* Updat